# scheduling

./: LICENSE  README.md  ReadMe-installtion.docx  example_gen.py  ~$adMe-installtion.docx
BandB/: CMakeLists.txt  (+3 more)
LocalSearch/: CMakeLists.txt  examples.rar  final-exams.rar  notes
LocalSearch/Viewer/src/: scheduling.cpp
LocalSearch/code/src/: maxheap.cpp  scheduling.cpp
LocalSearch/data/: machines.txt  tasks.txt
LocalSearch/ex2/: ex1.rar  ex2.rar  ex3-odd.rar  re-exam-5-2.rar
LocalSearch/ex2/ex1/after/: report.txt  summary.txt
LocalSearch/ex2/ex1/before/: report.txt  summary.txt
LocalSearch/ex2/ex1/input/: machines.txt  tasks.txt
LocalSearch/ex2/ex2/after/: report.txt  summary.txt
LocalSearch/ex2/ex2/input/: tasks.txt
LocalSearch/ex2/ex3-odd/after/: report.txt  summary.txt
LocalSearch/ex2/ex3-odd/before/: report.txt  summary.txt
LocalSearch/ex2/ex3-odd/input/: machines.txt  tasks.txt
LocalSearch/ex2/re-exam-5-2/after/: report.txt  summary.txt
LocalSearch/ex2/re-exam-5-2/before/: report.txt  summary.txt
LocalSearch/ex2/re-exam-5-2/input/: tasks.txt
LocalSearch/examples/10M100T-random/exam1/: report.txt  summary.txt
LocalSearch/examples/10M100T-random/exam2/: report.txt  summary.txt
LocalSearch/examples/10M100T-random/exam3/: report.txt  summary.txt
LocalSearch/examples/10M100T-random/exam4/: report.txt  summary.txt
LocalSearch/examples/10M100T-random/exam5/: report.txt  summary.txt
LocalSearch/examples/10M100T-random/exam6/: report.txt  summary.txt
LocalSearch/examples/10M100T-random/exam7/: report.txt  summary.txt
LocalSearch/examples/3M50T-2-2-4/EXAM1/: report.txt  summary.txt
LocalSearch/examples/3M50T-2-2-4/EXAM2/: report.txt  summary.txt
LocalSearch/examples/3M50T-2-2-4/exam3/: report.txt  summary.txt
LocalSearch/examples/3M50T-2-2-4/exam4/: report.txt  summary.txt
LocalSearch/examples/3M50T-2-2-4/exam5/: summary.txt
LocalSearch/examples/5M200T-1-1-1-1-4/exam1/: report.txt  summary.txt
LocalSearch/examples/5M200T-1-1-1-1-4/exam2/: summary.txt
LocalSearch/examples/5M200T-1-1-1-1-4/exam3/: report.txt  summary.txt
LocalSearch/examples/5M200T-1-1-1-1-4/exam4/: report.txt  summary.txt
LocalSearch/examples/5M200T-1-1-1-1-4/exam5/: report.txt  summary.txt
LocalSearch/final-exams/1/: ReadMe.txt
LocalSearch/final-exams/10/: ReadMe.txt
LocalSearch/final-exams/3/: ReadMe.txt
LocalSearch/final-exams/9/: ReadMe.txt
LocalSearch/old/: machines.txt  tasks.txt
LocalSearch/old/0205/: machines.txt  tasks.txt
LocalSearch/old/0405/: machines.txt  report.txt  summary.txt  tasks.txt
LocalSearch/old/3004/: machines.txt  tasks.txt
LocalSearch/old/good-4442/: after.txt  befor.txt  tasks.txt
LocalSearch/output/: 12-13.txt  2904.txt  LocalSearchreport.txt  level2.txt  m2mafter.txt  m2mbefor.txt  old.txt  report.txt  report1.txt  reporte1.txt  reporte2.txt  summary.txt
(+327 files in other folders)
